Fixed flexbox issues on IE11; Replaced Element.closest() with custom method because is not supported on IE11;

--- a/src/scss/accordion.scss
+++ b/src/scss/accordion.scss
@@ -44,6 +44,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 $padding;
+    height: 0; // fix IE11 flexbox issue
     cursor: pointer;
 
     &--with-desc {
